[package]
name = "geoguessr-bot-rs"
version = "0.1.0"
edition = "2021"
authors = ["Luukas Pörtfors <lajp@iki.fi>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serenity]
version = "*"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework", "unstable_discord_api"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "signal"]

[dependencies]
dotenv = "*"
tracing = "*"
tracing-subscriber = "*"
futures = "*"
serde_json = "*"
reqwest = { version = "*", features = ["cookies", "json"] }
serde = "*"
